--- a/app/views/layouts/no_search.html.erb
+++ b/app/views/layouts/no_search.html.erb
@@ -138,11 +138,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         				</div>
         				<div class="modal-body md-body">
         					<div class="md-body-fb">
-          						<button>Sign Up with Facebook</button>
+          						<button onclick="window.location.href='/auth/facebook/'">Sign Up with Facebook</button>
           					</div>
           					<br />
           					<div class="md-body-tw">
-          						<button>Sign Up with Twitter</button>
+          						<button onclick="window.location.href='/auth/twitter/'">Sign Up with Twitter</button>
           					</div>
           					<br />
           					<div>
@@ -181,29 +181,32 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         				</div>
         				<div class="modal-body md-body">
         					<div class="md-body-fb">
-          						<button>Log in with Facebook</button>
+          						<button onclick="window.location.href='/auth/facebook/'">Log in with Facebook</button>
           					</div>
           					<br />
           					<div class="md-body-tw">
-          						<button>Log in with Twitter</button>
+          						<button onclick="window.location.href='/auth/twitter/'">Log in with Twitter</button>
           					</div>
           					<br />
           					<div>
           						<h3>or</h3>
           					</div>
           					<br />
+							<%= form_tag ({ controller: "users", action: "attempt_login", method: "post"}) do %>
           					<div align="center">
           						<div class="key1">
 									<i class="fa fa-key" aria-hidden="true"></i>
-									<input type="text" placeholder="Username" name="username" />
+									<%= text_field_tag :email, nil, placeholder: :Email %>
 									<div class="clearfix"></div>
 								</div>
 								<div class="key1">
 									<i class="fa fa-lock" aria-hidden="true"></i>
-									<input type="password" placeholder="********" name="password" />
+									<%= password_field_tag :password, nil, placeholder: :Password %>
 									<div class="clearfix"></div>
 								</div>
+								<%= submit_tag "Log In", class: "search-no-border btn-search" %>
           					</div>
+							<% end %>
           					<br />
           					<br />
         				</div>
