Worked on the profile page. Added save button, sign out and new place for posting service

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3739,6 +3739,16 @@ span.shortline5 {
 }
 /*-- /About me--*/
 
+/* Save button */
+.save-button {
+  width: 100px;
+  height: 41px;
+  color: #fff;
+  background-color: #e67e22;
+  border: none;
+}
+/* Save button */
+
 /* -- new style for the nav div -- */
 .navigation-div {
   border: 1px solid white;
