--- a/app/views/layouts/no_search.html.erb
+++ b/app/views/layouts/no_search.html.erb
@@ -176,7 +176,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
       				<div class="modal-content">
         				<div class="modal-header the-modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo.png", class: "img-head" %>
+							<%= link_to root_path do %>
+          						<%= image_tag "app/logo.png", class: "img-head" %>
+							<% end %>
           					<h3 class="modal-title">Log in</h3>
         				</div>
         				<div class="modal-body md-body">
