--- a/app/views/profiles/_service_provider.html.erb
+++ b/app/views/profiles/_service_provider.html.erb
@@ -17,45 +17,55 @@
 	</ul>
 	<input type="file" class="upload-custom-banner"  style="width:100%;" title="Click to upload a banner" onchange="previewFile()"/>
 </div>
-<div class="about-me">
-	<br />
-</div>
 <div class="about-me" id="about">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-4 col-xs-12">
-				<div class="mydetails slideanim text-center">
-					<div>
-						<%= image_tag "app/man.jpg", { class: "img-circle img-responsive", alt: "Generic placeholder image", width: "200", height: "200" } %>
-						<h3>Who we are</h3>
-						<p class="short_desc_text"><%= @profile.short_desc %><i class="short_desc fa fa-pencil" aria-hidden="true"></i></p>
+			<div class="col-md-2" style="padding: 0em;">
+				<div class="mydetails slideanim text-center" style="padding: 0px;">
+					<div style="background-color: #aa9a80; width: 100%; height: 100%; color: white;">
+						<br /><br />
+						<%= image_tag "app/man.jpg", { class: "img-circle img-responsive img-border", alt: "Generic placeholder image", width: "200", height: "200" } %>
+						<br /><br />
+						<div class="row">
+							<div class="col-md-4">
+								<h4>125</h4>
+								<p>Reviews</p>
+							</div>
+							<div class="col-md-4" style="border-left: 1px solid white; border-right: 1px solid white;">
+								<h4>85</h4>
+								<p>Messages</p>
+							</div>
+							<div class="col-md-4">
+								<h4>210</h4>
+								<p>Listings</p>
+							</div>
+						</div>
+						<br /><br />
 					</div>
-					<br />
-					<div class="contact-info some-border">
-						<i class="short_desc fa fa-pencil" aria-hidden="true"></i>
-						<h3>Where you can find us</h3>
-						<i aria-hidden="true"></i>
-                        <div class="footer-info">
-							<div class="some-border">
-								<i class="fa fa-globe" aria-hidden="true"></i>
-								<p class="p1 address_text">77727 Moi Avenue </p>
-								<p class="p2 address_text_2">Nairobi, Kenya</p>
-							</div>
-							<div class="some-border">
-								<i class="fa fa-phone" aria-hidden="true"></i>
-								<p class="p1 phone_number_text">+1 515 151515</p>
-								<p class="p2 phone_number_text_2">+00 1010101010</p>
-							</div>
-							<div class="some-border">
-								<i class="fa fa-envelope" aria-hidden="true"></i>
-								<p class="p1 email_text"><%= @profile.user.email %></p>
-								<p class="p2 email_text_2">myemail2@example.com</p>
+					<div>
+						<!-- Some image here to show editing can be done here -->
+					</div>
+					<div>
+						<h3>WHO WE ARE</h3>
+						<div style="padding: 0em 2em 0em 2em;">
+							<p class="short_desc_text">Really short descriptive text about who we are and our mission and vision.</p>
+						</div>
+						<br />
+						<div>
+							<h3>WHAT WE DO</h3>
+                        	<div class="footer-info">
+								<div style="padding: 0em 2em 0em 2em;">
+									<p>Talk about your company's what we do over here</p>
+								</div>
+								<br />
+								<div style="padding: 0em 2em 0em 2em;">
+									<h3>WHY WE DO IT</h3>
+									<p>Talk your company's why we do it over here</p>
+								</div>
+								<br />
 							</div>
 						</div>
 					</div>
-
-
-
 				</div>
 			</div>
 			<% if flash[:notice].nil? %>
@@ -63,51 +73,20 @@
 			<% else %>
 				<%= display_service_posted_success flash[:notice] %>
 			<% end %>
-			<div class="col-md-8 col-xs-12">
+			<div class="col-md-10" style="padding: 0em;">
 
 				<div class="navigation-div">
 					<ul class="nav nav-tabs">
-    					<li class="active"><a data-toggle="tab" href="#home">My Inbox</a></li>
-    					<li><a data-toggle="tab" href="#menu1">Post Service</a></li>
-    					<li><a data-toggle="tab" href="#menu3">About</a></li>
-    					<li class="dropdown">
-    						<a class="dropdown-toggle" data-toggle="dropdown">Other<span class="caret"></span></a>
-    							<ul class="dropdown-menu">
-      								<li><a href="/user/sign_out/">Sign out</a></li>
-    							</ul>
-  						</li>
+						<li class="active"><a data-toggle="tab" href="#home">New Listing</a></li>
+						<li><a data-toggle="tab" href="#menu3">My Listings</a></li>
+    					<li><a data-toggle="tab" href="#menu1">Inbox</a></li>
   					</ul>
   				</div>
 
   				<div class="tab-content">
-    				<div id="home" class="tab-pane fade in active">
+  					<div id="home" class="tab-pane fade in active">
       					<div class="myskills slideanim">
-							<div class="row">
-  								<div class="panel-group" id="accordion"> 
-								  <% @mail_box.each do |message| %>
-    								<div class="panel panel-default">
-      									<div class="panel-heading">
-        									<h4 class="panel-title">
-          										<a class="message-mail" title="<%= message.id %>" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= message.id %>"><%= message.sender.name %></a>
-        									</h4>
-        									
-      									</div>
-      									<div id="collapse<%= message.id %>" class="panel-collapse collapse">
-        									<div class="panel-body">
-        										<%=  message.body %>
-        										<br /><br />
-        										<a href="#replyModal<%= message.id %>" class="messaging-body" data-toggle="modal">Reply</a>
-        									</div>
-      									</div>
-    								</div>
-									<% end %>
-  								</div> 
-							</div>
-						</div>
-    				</div>
-    				<div id="menu1" class="tab-pane fade">
-      					<div class="myskills slideanim">
-							<h3 class="text-center">Post a service</h3>
+							<h3 class="text-center">Post a Listing</h3>
 							<%= form_for @service, url: { controller: :services, action: :create, profile: @profile.id } do |f| %>
                     		<table class="table table-striped">
                     			<tr>
@@ -148,7 +127,7 @@
 								</tr>
 								<tr>
 									<td colspan="2" align="center">	
-										<%= f.submit "Upload", class: "btn btn-success" %>
+										<%= f.submit "Submit", class: "btn btn-success" %>
 									</td>
 								</tr>
 								<% end %>
@@ -156,11 +135,6 @@
 						</div>
     				</div>
     				<div id="menu3" class="tab-pane fade">
-      					<div class="myskills slideanim">
-							<h3 class="text-center">Why hire us <i class="long_desc fa fa-pencil" aria-hidden="true"></i></h3>
-							<p class="skill-text long_desc_text"><%= @profile.desc %></p>
-						</div>
-						<br />
 						<div class="myskills slideanim move-down">
 							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 								<ol class="carousel-indicators">
@@ -171,9 +145,9 @@
 								<div class="carousel-inner" role="listbox">
 									<% if @my_services.blank? %>
 
-									<h3 class="text-center">You are yet to post a service</h3>
+									<h3 class="text-center">You are yet to post a listing</h3>
 									<hr style="margin:0;">
-									<p class="text-center">When you post a service, you’ll see them here.</p>
+									<p class="text-center">When you post listings, they will appear here.</p>
 
 									<% else %>
 
@@ -191,6 +165,33 @@
 
 
     				</div>
+    				<div id="menu1" class="tab-pane fade"><!-- Can you put one of those messages here -->
+      					<div class="myskills slideanim"><!-- So that it won't be blank just like that -->
+							<div class="row">
+  								<div class="panel-group" id="accordion">
+								  <% @mail_box.each do |message| %>
+    								<div class="panel panel-default">
+      									<div class="panel-heading">
+        									<h4 class="panel-title">
+          										<a class="message-mail" title="<%= message.id %>" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= message.id %>"><%= message.sender.name %></a>
+        									</h4>
+        									
+      									</div>
+      									<div id="collapse<%= message.id %>" class="panel-collapse collapse">
+        									<div class="panel-body">
+        										<%=  message.body %>
+        										<br /><br />
+        										<a href="#replyModal<%= message.id %>" class="messaging-body" data-toggle="modal">Reply</a>
+        									</div>
+      									</div>
+    								</div>
+									<% end %>
+  								</div> 
+							</div>
+						</div>
+    				</div>
+    				
+    				
   				</div>
 			</div>
 
