Done with the new profile page

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3512,12 +3512,12 @@ input.upload-custom-banner {
 	margin: 0 auto;
 }
 .banner-profile-info {
-    text-align: center;
-    width: 100%;
+    width: 50%;
+    background-color: rgba(255, 255, 255, 0.72);
     /** margin: 280px 0 0 390px; **/
 }
 .banner-profile-info h3{
-	color: #fff;
+	color: #3c3737;
 	font-size: 52px;
 	font-weight: bold;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
@@ -3526,7 +3526,7 @@ input.upload-custom-banner {
 	padding: 60px 0 20px 0;
 }
 .banner-profile-info p {
-	color: #fff;
+	color: #3c3737;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 	font-size: 34px;
 	font-weight: normal;
@@ -3748,6 +3748,13 @@ span.shortline5 {
   background-color: #e67e22;
   border: none;
 }
+.edit-button {
+  width: 100px;
+  height: 41px;
+  color: #000;
+  background-color: #fff;
+  border: 2px solid #827f7f;
+}
 /* Save button */
 
 /* -- new style for the nav div -- */
@@ -3950,7 +3957,8 @@ hr{
 	height: 500px;
 	}
 	.banner-profile-info {
-	margin: 250px 0 0 390px;
+    margin-top: 100px;
+	padding-left: 7em;
 	}
     input.upload-custom-banner {
     cursor: pointer;
@@ -3967,13 +3975,15 @@ hr{
 
 @media (max-width: 1366px) {
 	.banner-profile-info {
-    margin: 235px 0 0 350px;
+    margin-top: 100px;
+  padding-left: 7em;
 }
 }
 
 @media (max-width: 1280px) {
 	.banner-profile-info {
-    margin: 235px 0 0 320px;
+    margin-top: 100px;
+  padding-left: 7em;
 }
 }
 
@@ -3995,7 +4005,8 @@ hr{
 	width:400px;
 }
 	.banner-profile-info {
-    margin: 235px 0 0 262px;
+    margin-top: 100px;
+  padding-left: 7em;
 }
 	.banner-profile-info p {
 	font-size:25px;
@@ -4011,7 +4022,8 @@ hr{
     height: 675px;
 }
 	.banner-profile-info {
-    margin: 180px 0 0 262px;
+    margin-top: 100px;
+  padding-left: 7em;
 }
 input.upload-custom-banner {
     cursor: pointer;
@@ -4077,7 +4089,8 @@ input.upload-custom-banner {
     height: 600px;
 }
 	.banner-profile-info {
-    margin: 180px 0 0 205px;
+    margin-top: 100px;
+  padding-left: 7em;
 }
 	.grid figure, .grid .placeholder {
     width: 230px;
@@ -4103,7 +4116,8 @@ input.upload-custom-banner {
 
 @media (max-width: 768px) {
 	.banner-profile-info {
-    margin: 180px 0 0 200px;
+    margin-top: 100px;
+  padding-left: 7em;
 }
 input.upload-custom-banner {
     display: none;
