--- a/app/views/profiles/_service_provider.html.erb
+++ b/app/views/profiles/_service_provider.html.erb
@@ -123,7 +123,10 @@
 									</td>-->
 								</tr>
 								<tr>
-                    				
+                    				<td>Name of product</td>
+                    				<td>
+										<%= f.text_field :name_of_service, placeholder: "Name", class: "form-control" %>	
+									</td>
 								</tr>
 								<tr>
 									<td>Please upload a picture of your product</td>
