Profile page modification

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -1960,7 +1960,7 @@ a#myTabDrop1 {
     line-height: 30px;
 }
 .bottom-div {
-	background-color: #fff;
+	background-color: #f2f2f2;
 }
 .panel-group .panel+.panel {
     margin-top: 0px;
@@ -3598,6 +3598,8 @@ img.img-responsive {
 .mydetails {
 	padding: 6%;
   border-right: 2px solid #aa9a80;
+  border-left: 2px solid #aa9a80;
+  border-bottom: 2px solid #aa9a80;
 }
 .mydetails h3 {
 	color:#000;
