--- a/app/views/profiles/_service_provider.html.erb
+++ b/app/views/profiles/_service_provider.html.erb
@@ -24,7 +24,7 @@
 					<div class="col-md-2">
 						<br /><br />
     					<ul class="card">
-							<li><button class="edit-button">Edit Profile</button></li><!-- Edit profile button-->
+							<li></li><!-- Edit profile button-->
 							<li><a href=""><i class="fa fa-user" aria-hidden="true"></i>Sign out</a></li>
 							<!-- Sign out link is here -->
 						</ul>
@@ -52,10 +52,11 @@
 		</li>
 	</ul>
 </div>
-<div class="about-me" id="about">
-	<div class="container-fluid">
+<div class="about-me" id="about" style="background-color: #f2f2f2;">
+	<div class="container">
+	<br /><br />
 		<div class="row">
-			<div class="col-md-2" style="padding: 0em;">
+			<div class="col-md-3">
 				<div class="mydetails slideanim text-center" style="padding: 0px;">
 					<div style="background-color: #aa9a80; width: 100%; height: 100%; color: white;">
 						<br /><br />
@@ -77,7 +78,7 @@
 						</div>
 						<br /><br />
 						<div>
-							<button class="save-button">New Listing</button><!-- To new listing tab -->
+							<button class="save-button">Edit Profile</button>
 						</div>
 						<br /><br />
 					</div>
@@ -109,7 +110,7 @@
 			<% else %>
 				<%= display_service_posted_success flash[:notice] %>
 			<% end %>
-			<div class="col-md-10" style="padding: 0em;">
+			<div class="col-md-9" style="background-color: #fff;">
 
 				<div class="navigation-div">
 					<ul class="nav nav-tabs">
@@ -119,7 +120,7 @@
   					</ul>
   				</div>
   				<br /><br />
-  				<div class="tab-content" align="center" style="width: 60%; margin: auto;">
+  				<div class="tab-content" align="center">
   					<div id="home" class="tab-pane fade in active from-prof">
       					<div class="myskills slideanim">
 							<h3 class="text-center">Post a Listing</h3>
@@ -230,7 +231,6 @@
     				
   				</div>
 			</div>
-
 				
 				
 			
