--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3742,7 +3742,7 @@ span.shortline5 {
 }
 /*-- /About me--*/
 
-/* Save button */
+/* Save button and table vertical align */
 .save-button {
   width: 100px;
   height: 41px;
