--- a/app/views/profiles/_service_provider.html.erb
+++ b/app/views/profiles/_service_provider.html.erb
@@ -67,95 +67,12 @@
 
 				<div class="navigation-div">
 					<ul class="nav nav-tabs">
-    					<li class="active"><a data-toggle="tab" href="#home">My Inbox</a></li>
-    					<li><a data-toggle="tab" href="#menu1">Post Service</a></li>
-    					<li><a data-toggle="tab" href="#menu3">About</a></li>
-    					<li class="dropdown">
-    						<a class="dropdown-toggle" data-toggle="dropdown">Other<span class="caret"></span></a>
-    							<ul class="dropdown-menu">
-      								<li><a href="/user/sign_out/">Sign out</a></li>
-    							</ul>
-  						</li>
+    					<li class="active"><a data-toggle="tab" href="#home">About</a></li>
   					</ul>
   				</div>
 
   				<div class="tab-content">
     				<div id="home" class="tab-pane fade in active">
-      					<div class="myskills slideanim">
-							<div class="row">
-  								<div class="panel-group" id="accordion"> 
-								  <% @mail_box.each do |message| %>
-    								<div class="panel panel-default">
-      									<div class="panel-heading">
-        									<h4 class="panel-title">
-          										<a class="message-mail" title="<%= message.id %>" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= message.id %>"><%= message.sender.name %></a>
-        									</h4>
-        									
-      									</div>
-      									<div id="collapse<%= message.id %>" class="panel-collapse collapse">
-        									<div class="panel-body">
-        										<%=  message.body %>
-        										<br /><br />
-        										<a href="#replyModal<%= message.id %>" class="messaging-body" data-toggle="modal">Reply</a>
-        									</div>
-      									</div>
-    								</div>
-									<% end %>
-  								</div> 
-							</div>
-						</div>
-    				</div>
-    				<div id="menu1" class="tab-pane fade">
-      					<div class="myskills slideanim">
-							<h3 class="text-center">Post a service</h3>
-							<%= form_for @service, url: { controller: :services, action: :create, profile: @profile.id } do |f| %>
-                    		<table class="table table-striped">
-                    			<tr>
-                    				<td>Your service type</td>
-                    				<td>
-										<%= f.select :category_id, @categories.map {|c| [c.name, c.id]}, class: "form-control" %>
-									</td>
-								</tr>
-								<tr>
-                    				<!--<td>Your service sub-category</td>
-                    				<td>
-										
-									</td>-->
-								</tr>
-								<tr>
-                    				<td>Name of product</td>
-                    				<td>
-										<%= f.text_field :name_of_service, placeholder: "Name", class: "form-control" %>	
-									</td>
-								</tr>
-								<tr>
-									<td>Please upload a picture of your product</td>
-									<td>
-										<%= f.file_field :picture, class: "form-control" %>
-									</td>
-								</tr>
-								<tr>
-									<td>Description of the product or service</td>
-									<td>
-										<%= f.text_area :desc_service, rows:"10", cols:"31", placeholder: "Service Description", class:"form-control" %>
-									</td>
-								</tr>
-								<tr>
-									<td>Minimal Price</td>
-									<td>
-										<%= f.text_field :price, placeholder: "Price", class: "form-control" %>	
-									</td>
-								</tr>
-								<tr>
-									<td colspan="2" align="center">	
-										<%= f.submit "Upload", class: "btn btn-success" %>
-									</td>
-								</tr>
-								<% end %>
-							</table>
-						</div>
-    				</div>
-    				<div id="menu3" class="tab-pane fade">
       					<div class="myskills slideanim">
 							<h3 class="text-center">Why hire us <i class="long_desc fa fa-pencil" aria-hidden="true"></i></h3>
 							<p class="skill-text long_desc_text"><%= @profile.desc %></p>
@@ -183,10 +100,7 @@
 								</div>
 							</div>
 						</div>
-
-
     				</div>
-  				</div>
 			</div>
 
 				
@@ -199,41 +113,43 @@
 	<div class="bottom-div">
 		<br />
 	</div>
-</div>
 
-<% @mail_box.each do |message| %>
-		<div class="container">
+
+<div class="container">
   			
-  			<div class="modal fade rplymd" id="replyModal<%= message.id %>" role="dialog">
-    			<div class="modal-dialog">
-    
-      				<div class="modal-content">
-        				<div class="modal-header the-modal-header">
-          					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo1.png", class: "img-head" %>
-          					<br /><br /><br />
+  			<div class="modal fade" id="welcome-screen" role="dialog">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header the-modal-header">
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+							<%= image_tag "app/logo1.png", class: "img-head" %>
+							<br /><br /><br />
+							<h2>Welcome to your profile</h2>
+							<span class="line1"></span>
+						</div>
+						<div class="modal-body md-body" align="center">
+							<h3>Please take some time and edit your company details</h3>
+							<br /><br /><br />
+							<h4>Editing your profile details will enable you to be found by searchers looking for your service quickly and easily</h4>
+							<br /><br /><br />
+						</div>
+						<div class="modal-footer the-modal-footer">
+							<br />
+							<button type="button" class="save-button" data-dismiss="modal">Continue</button>
+						</div>
+					</div>
+		
+				</div>
+			</div>
 
-          					<h3 class="modal-title"><%= message.body %> </h3>
-        				</div>
-        				<div class="modal-body md-body" align="center">
-        					
-        						<textarea id="body" row="10" col="10"></textarea>
-								<p class="sender-this" style="display: none;"><%= message.sender.profile.id %></p>
-        						<br /><br /><br />
-        				</div>
-        				<div class="modal-footer the-modal-footer">
-						<button id="message-supplier">Contact Supplier</button>
-						
-        					
-        					
-        				</div>
-      				</div>
-      
-    			</div>
-  			</div>
-  
 		</div>
-<% end %>
+
+</div>
+<script type="text/javascript">
+	$(window).load(function(){
+		$('#welcome-screen').modal('show');
+	});
+</script>
 
 
 
@@ -313,6 +229,9 @@ function previewFile() {
 
 
 $('#save-changes').click(function(e) {
+		$('.banner-profile').prepend("<div class='alert alert-success' style='margin-bottom:0px' role='alert'> Saving Profile... Please Wait!!!</div>");
+		$(this).html("Saving...");
+		$(this).attr("disabled", "disabled");
 		e.preventDefault();
 		var profile;
 		var formData = new FormData();
@@ -336,46 +255,18 @@ $('#save-changes').click(function(e) {
   processData: false,
 	  success: function(resp){ 
 			console.log(resp);
+			window.location = "show/"+profile;
 			},
 		 fail:  function(resp){
 			console.log(resp);
+			$('.banner-profile').prepend("<div class='alert alert-danger' style='margin-bottom:0px' role='alert'> <button aria-hidden='true' data-dismiss='alert' class='close' type='button'> × </button> We cannot save your profile at this time</div>");
+			$(this).removeAttr("disabled");
+			$(this).html("Save");
 	   }
 		});
 
 
 });
-
-	$('.message-mail').click(function(e){
-		var messageId = $(this).attr('title');
-		var messageForm = new FormData();
-		messageForm.append('message[read]', 1);
-
-		$.ajax({
-		  url: "/messages/"+messageId,
-		 type: "PATCH",
-		 data: messageForm,
-		cache: false,
-  contentType: false,
-  processData: false,
-	  success: function(resp){ 
-			console.log(resp);
-			},
-		 fail:  function(resp){
-			console.log(resp);
-	   		}
-		});
-
-	});
-
-
-
-
-
-
-
-
-
-
 
 	$('#message-supplier').click(function(e){
 	e.preventDefault();
