make create listing work

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -81,7 +81,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<h4>The best events start with the best suppliers. Find everything you need, all in one place</h4>
 			<br /><br /><br />
 			<h4><a href="#howto" id="works">See how it works</a></h4>
-			<button class="banner-info-button"><a href="/users/new/">Create a listing</a></button>
+			<button onclick="window.location.href='/users/new/'" class="banner-info-button">Create a listing</button>
 			<br /><br /><br /><br /><br />
 			<h3>What are you looking for?</h3>
 			<div class="search-form container overlay">
